[package]
name = "img-packing"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
crunch = "0.5.3"
env_logger = "0.11.3"
printpdf = { version = "0.7.0", features = ["embedded_images", "pdf-writer"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
